--- a/ui/-/less/main.less
+++ b/ui/-/less/main.less
@@ -16,6 +16,15 @@
     }
 
     > .node {
-        flex-grow: 1;
+
+        .h100() {
+            display: flex;
+            flex-direction: column;
+            //height: 100%;
+
+            flex-grow: 1;
+        }
+
+        .h100;
     }
 }
