--- a/ui/node/-/less/main.less
+++ b/ui/node/-/less/main.less
@@ -3,25 +3,33 @@
 // }
 
 .@{__nodeId__} {
+
+    .h100() {
+        display: flex;
+        flex-direction: column;
+        //height: 100%;
+        flex-grow: 1;
+    }
+
+    .h100;
+
     font-family: Verdana;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+    width: 100%;
 
     > .cp {
 
     }
 
     > .content {
-        height: 100%;
+        .h100;
         max-height: 100%;
         overflow: auto;
 
         > div {
-            height: 100%;
+            .h100;
 
             > div {
-                height: 100%;
+                .h100;
             }
         }
     }
