--- a/ui/createModule/-/less/main.less
+++ b/ui/createModule/-/less/main.less
@@ -1,5 +1,5 @@
 // head {
-@import "../../../../../../../modules-vendor/fed/css/std/-/less/main.less";
+@import "../../../../../css/std/-/less/main.less";
 
 @__nodeId__: ~"ewma_dev_ui_createModule__main";
 // }
@@ -16,7 +16,7 @@
             white-space: nowrap;
         }
 
-        .tail {
+        .inputs {
             flex-grow: 1;
 
             input {
