--- a/ui/nodeFileGenerator/-/less/main.less
+++ b/ui/nodeFileGenerator/-/less/main.less
@@ -43,8 +43,9 @@
             .generate_button {
                 cursor: pointer;
                 float: left;
-                margin: 1px;
-                padding: 5px 15px;
+                margin-right: 1px;
+                padding: 8px 15px;
+                //padding: 5px 15px;
                 font-size: 11px;
 
                 color: #ffffff;
@@ -74,6 +75,28 @@
                     background-color: #404040;
                     color: #bdff00;
                 }
+            }
+        }
+    }
+
+    .update_cache_button {
+        cursor: pointer;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        padding: 25px 35px;
+
+        .icon {
+            font-size: 60px;
+            color: #E0E0E0;
+
+            transition: all 0.3s;
+        }
+
+        &:hover {
+
+            .icon {
+                color: #FF3A29;
             }
         }
     }
