skip virtual modules, "fed/ewma": "~0.16"

--- a/ui/modulesTree/-/less/main.less
+++ b/ui/modulesTree/-/less/main.less
@@ -92,13 +92,14 @@
 
             &.master {
                 //color: #0B09BC;
-                color: #000269;
-                //background-color: #C7D7EF;
+                //color: #000269;
+                color: #0057ca;
             }
 
             &.slave {
                 //color: #E60081;
-                color: #E60081;
+                //color: #E60081;
+                color: #f50056;
                 //background-color: #FFE9F6;
             }
         }
@@ -107,11 +108,13 @@
 
             &.master {
                 //color: #0B09BC;
-                color: #B4D9FF;
+                //color: #B4D9FF;
+                color: #b1b1b1;
             }
 
             &.slave {
-                color: #E4ABC8;
+                //color: #E4ABC8;
+                color: #ff4848;
             }
 
             .indent {
