--- a/ui/-/less/main.less
+++ b/ui/-/less/main.less
@@ -6,9 +6,35 @@
     display: flex;
     flex-grow: 1;
 
+    .h100() {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        flex-grow: 1;
+    }
+
     > .modules {
-        min-width: 300px;
-        overflow: auto;
+        .h100;
+        box-sizing: border-box;
+        flex-grow: 0;
+        flex-shrink: 0;
+
+        border-radius: 5px;
+        min-width: 250px;
+
+        > .cp {
+
+        }
+
+        > .tree {
+            .h100;
+            overflow: auto;
+        }
+
+        .ui-resizable-e {
+            width: 10px;
+            right: -8px;
+        }
     }
 
     > .nodes {
